body overflow fix

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,11 +40,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
   height: 100vh;
   width: 100%;
   max-width: 1390px;
-  margin: 0 auto;
+  margin: auto;
+  overflow-x: hidden;
 
   font-family: var(--font-text);
   font-size: 18px;
